# test-project

./: .gitignore  Makefile  README.md  env.example  pyproject.toml  requirements.txt
doc/: conventions.md  product_idea.md  tasklist.md  vision.md  workflow.md
doc/guides/: botfather_setup.md
src/: __init__.py  config.py  logging_config.py  main.py
src/bot/: __init__.py  bot.py  handlers.py
src/dialog/: __init__.py
src/llm/: __init__.py
tests/: test_bot.py  test_config.py
